--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>admin</title>
     <link rel="stylesheet" href="./public/css/admin.css">
+    <script type="text/javascript" src="./public/js/cropper.js"></script>
   </head>
   <body>
     <div id="showROI">
