--- a/views/basic/chart.ejs
+++ b/views/basic/chart.ejs
@@ -1,9 +1,9 @@
 <div class = "chartSection">
   <div class="chartContent">
+    <div class="CameraNumber">
+      카메라별 차트
+    </div>
     <div class="chartTab">
-      <div class="CameraNumber">
-        카메라별 차트
-      </div>
       <div class="chartCrt">
         <div class = "criteria" id = "chartBtn1">지난 7일 총인원</div>
         <div class = "criteria" id = "chartBtn2">시간 별 총인원</div>
@@ -11,9 +11,10 @@
       </div>
       </div>
       <div class="chart">
-        <canvas id="myChart1" width="300" height="300"></canvas>
-        <canvas id="myChart2" width="400" height="400"></canvas>
-        <canvas id="myChart3" width="400" height="400"></canvas>
+        <div id='chartjsLegend' class='chartjsLegend'></div>
+        <canvas id="myChart1" width="1200px" height="500px"></canvas>
+        <canvas id="myChart2" width="1200px" height="500px"></canvas>
+        <canvas id="myChart3" width="1200px" height="500px"></canvas>
       </div>
     </div>
 </div>
