--- a/views/basic/index.ejs
+++ b/views/basic/index.ejs
@@ -4,10 +4,15 @@
     <meta charset="utf-8">
     <title>admin</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
-    <link rel="stylesheet" href="./public/css/basic.css">
+    <link rel="stylesheet" href="./public/css/chart.css">
   </head>
   <body>
+    <div id = "header">
+      <div id="logo">
+        <img src="./public/images/technonia_logo.png" id="header" />
+      </div>
+    </div>
     <%- include('./chart') %>
-    <script src="./public/js/basic.js"></script>
+    <script src="./public/js/chart.js"></script>
   </body>
 </html>
