--- a/views/basic/index.ejs
+++ b/views/basic/index.ejs
@@ -12,7 +12,9 @@
         <img src="./public/images/technonia_logo.png" id="header" />
       </div>
     </div>
+    <%- include('./info') %>
     <%- include('./chart') %>
+    <%- include('./cameraImage') %>
     <script src="./public/js/chart.js"></script>
   </body>
 </html>
