--- a/views/basic/index.ejs
+++ b/views/basic/index.ejs
@@ -5,6 +5,8 @@
     <title>admin</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
     <link rel="stylesheet" href="./public/css/chart.css">
+    <link rel="stylesheet" href="./public/css/info.css">
+    <link rel="stylesheet" href="./public/css/cameraImage.css">
   </head>
   <body>
     <div id = "header">
