--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>admin</title>
     <link rel="stylesheet" href="./public/css/admin.css">
+    <link rel="stylesheet" href="./public/css/setting.css">
     <script type="text/javascript" src="./public/js/cropper.js"></script>
     <script src="https://code.jquery.com/jquery-latest.min.js"></script>
 
