--- a/views/admin/setting.ejs
+++ b/views/admin/setting.ejs
@@ -66,7 +66,7 @@
                <option value="30(개월)" class="input">30(개월)</option>
              </select>
            </td>
-           <td><button class="confirm" id="confirm_image">확인</button></td>
+           <!--<td><button class="confirm" id="confirm_image">확인</button></td>-->
          </tr>
        </table>
        </div>
