--- a/views/admin/setting.ejs
+++ b/views/admin/setting.ejs
@@ -1,9 +1,9 @@
 <div id="setting">
-    <!--<form action="./setting" method="post" id="setting">-->
+    <form action="./setting" method="post" id="setting">
     <div class="info" id="info_camera">
       <table>
         <tr class="info_title">
-          <td>카메라 정보</td> <td><button class="edit" id="edit_camera">수정</button></td>
+          <td>카메라 정보</td> <td><button class="edit btn" id="edit_camera">수정</button></td>
         </tr>
         <tr></tr>
         <tr></tr>
@@ -26,14 +26,14 @@
               <option value="3" class="input">3</option>
             </select>
           </td>
-          <td><button class="confirm" id="confirm_camera">확인</button></td>
+          <td><button class="confirm btn submit" id="confirm_camera">확인</button></td>
         </tr>
         </table>
       </div>
       <div class="info" id="info_image">
         <table>
           <tr class="info_title">
-            <td>이미지 저장 정보</td> <td><button class="edit" id="edit_image">수정</button></td>
+            <td>이미지 저장 정보</td> <td><button class="edit btn" id="edit_image">수정</button></td>
           </tr>
           <tr></tr>
           <tr></tr>
@@ -66,7 +66,7 @@
                <option value="30(개월)" class="input">30(개월)</option>
              </select>
            </td>
-           <!--<td><button class="confirm" id="confirm_image">확인</button></td>-->
+           <!--<td><button class="confirm btn submit" id="confirm_image">확인</button></td>-->
          </tr>
        </table>
        </div>
