--- a/views/admin/setting.ejs
+++ b/views/admin/setting.ejs
@@ -26,7 +26,7 @@
               <option value="3" class="input">3</option>
             </select>
           </td>
-          <td><button class="confirm btn submit" id="confirm_camera">확인</button></td>
+          <td><button class="confirm btn submit" id="confirm">확인</button></td>
         </tr>
         </table>
       </div>
