--- a/views/basic/chart.ejs
+++ b/views/basic/chart.ejs
@@ -3,6 +3,7 @@
     <div class="CameraNumber">
       카메라별 차트
     </div>
+    <%- include('./search') %>
     <div class="chartTab">
       <div class="chartCrt">
         <div class = "criteria" id = "chartBtn1">지난 7일 총인원</div>
