--- a/views/basic/index.ejs
+++ b/views/basic/index.ejs
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="./public/css/chart.css">
     <link rel="stylesheet" href="./public/css/info.css">
     <link rel="stylesheet" href="./public/css/cameraImage.css">
+    <link rel="stylesheet" href="./public/css/search.css">
+    <script src="https://code.jquery.com/jquery-latest.min.js"></script>
   </head>
   <body>
     <div id = "header">
@@ -18,5 +20,6 @@
     <%- include('./chart') %>
     <%- include('./cameraImage') %>
     <script src="./public/js/chart.js"></script>
+    <script src="./public/js/search.js"></script>
   </body>
 </html>
