--- a/views/admin/setting.ejs
+++ b/views/admin/setting.ejs
@@ -70,8 +70,8 @@
          </tr>
        </table>
        </div>
+       </form>
        <!--
        <button class="btn" id="change">정보 수정</button>
        <button class="submit btn" id="confirm">확인</button>-->
   </div>
-  <!--</form>-->
