--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -16,9 +16,11 @@
       </div>
     </div>
     <div id="main">
-      <%- include('./setting') %>
+      <%- include('./setting1') %>
+      <%- include('./setting2') %>
       <%- include('./roi') %>
     </div>
     <script src="./public/js/admin.js"></script>
+    <script src="./public/js/setting.js"></script>
   </body>
 </html>
