--- a/views/admin/setting1.ejs
+++ b/views/admin/setting1.ejs
@@ -1,10 +1,10 @@
-<div id="setting">
+<div id="setting1">
   <!--<%= data.sizeW %>-->
-    <form action="./setting" method="post" id="setting">
+    <form action="./setting1" method="post" id="setting1">
     <div class="info" id="info_camera">
       <table>
         <tr class="info_title">
-          <td>카메라 정보</td> <td><button class="edit btn" id="edit_camera">수정</button></td>
+          <td>카메라 정보</td>
         </tr>
         <tr></tr>
         <tr></tr>
@@ -36,14 +36,13 @@
               -->
             </select>
           </td>
-          <td><button class="confirm btn submit" id="confirm">확인</button></td>
         </tr>
         </table>
       </div>
       <div class="info" id="info_image">
         <table>
           <tr class="info_title">
-            <td>이미지 저장 정보</td> <td><button class="edit btn" id="edit_image">수정</button></td>
+            <td>이미지 저장 정보</td>
           </tr>
           <tr></tr>
           <tr></tr>
@@ -83,7 +82,8 @@
          </tr>
        </table>
        </div>
-       </form>
+       <td><button class="confirm btn submit" id="confirm1">확인</button></td>
+       <!--</form>-->
        <!--
        <button class="btn" id="change">정보 수정</button>
        <button class="submit btn" id="confirm">확인</button>-->
