--- a/views/admin/setting1.ejs
+++ b/views/admin/setting1.ejs
@@ -83,7 +83,7 @@
        </table>
        </div>
        <td><button class="confirm btn submit" id="confirm1">확인</button></td>
-       <!--</form>-->
+       </form>
        <!--
        <button class="btn" id="change">정보 수정</button>
        <button class="submit btn" id="confirm">확인</button>-->
