setting의 거추장스러운 괄호를 떼버림

--- a/views/admin/setting1.ejs
+++ b/views/admin/setting1.ejs
@@ -50,10 +50,10 @@
            <td>저장 간격</td>
            <td>
              <select id="save_interval" name="저장간격">
-               <option value="<%= data.saveInterval %>" class="input"><%= data.saveInterval %>(초)</option>
-               <option value="10" class="input">10(초)</option>
-               <option value="20" class="input">20(초)</option>
-               <option value="30" class="input">30(초)</option>
+               <option value="<%= data.saveInterval %>" class="input"><%= data.saveInterval %>초</option>
+               <option value="10" class="input">10초</option>
+               <option value="20" class="input">20초</option>
+               <option value="30" class="input">30초</option>
              </select>
            </td>
          </tr>
@@ -61,10 +61,10 @@
            <td>최대 저장 갯수</td>
            <td>
              <select id="max_cnt" name="최대저장갯수">
-               <option value="<%= data.saveNum %>" class="input"><%= data.saveNum %>(개)</option>
-               <option value="100" class="input">100(개)</option>
-               <option value="200" class="input">200(개)</option>
-               <option value="300" class="input">300(개)</option>
+               <option value="<%= data.saveNum %>" class="input"><%= data.saveNum %>개</option>
+               <option value="100" class="input">100개</option>
+               <option value="200" class="input">200개</option>
+               <option value="300" class="input">300개</option>
              </select>
            </td>
          </tr>
@@ -72,10 +72,10 @@
            <td>최대 저장 기간</td>
            <td>
              <select id="max_term" name="최대저장기간">
-               <option value="<%= data.savePeriod %>" class="input"><%= data.savePeriod %>(개월)</option>
-               <option value="10" class="input">10(개월)</option>
-               <option value="20" class="input">20(개월)</option>
-               <option value="30" class="input">30(개월)</option>
+               <option value="<%= data.savePeriod %>" class="input"><%= data.savePeriod %>개월</option>
+               <option value="10" class="input">10개월</option>
+               <option value="20" class="input">20개월</option>
+               <option value="30" class="input">30개월</option>
              </select>
            </td>
            <!--<td><button class="confirm btn submit" id="confirm_image">확인</button></td>-->
