--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -12,7 +12,7 @@
   <body>
     <div id = "header">
       <div id="logo">
-        <img src="./public/images/technonia_logo.png" id="header" />
+        <img src="./public/images/technonia_logo.png" id="header" style = "width: 150px;"/>
       </div>
     </div>
     <div id="main">
