--- a/views/basic/index.ejs
+++ b/views/basic/index.ejs
@@ -13,7 +13,7 @@
   <body>
     <div id = "header">
       <div id="logo">
-        <img src="./public/images/technonia_logo.png" id="header" />
+        <img src="./public/images/technonia_logo.png" id="header" style = "width: 150px;"/>
       </div>
     </div>
     <%- include('./info') %>
