--- a/views/admin/roi.ejs
+++ b/views/admin/roi.ejs
@@ -1,4 +1,3 @@
-<div id="hidden" hidden>hidden</div>
 <div id="adminROI">
   <div class="roi">
     <div class="CameraNumber">
@@ -14,7 +13,7 @@
         <div id="camera2"><img src="./config/images/2.jpeg" id="image2" class = "image"/></div>
       </div>
       <div class="button">
-        <button type="button" id = "submit">확인</button>
+        <a href = "/submit"><button type="button" id = "submit">확인</button></a>
       </div>
     </div>
   </div>
