--- a/views/basic/index.ejs
+++ b/views/basic/index.ejs
@@ -19,6 +19,20 @@
     <%- include('./info') %>
     <%- include('./chart') %>
     <%- include('./cameraImage') %>
+    <script type="text/javascript">
+      var data3 = [];
+      var data4 = [];
+      var data5 = [];
+      <% data3.forEach(function(d) { %>
+          data3.push([<%=d.cameraID%>, '<%=d.date%>', <%=d.people%>]);
+      <% }) %>
+      <% data4.forEach(function(d) { %>
+          data4.push([<%=d.cameraID%>, '<%=d.date%>', <%=d.people%>]);
+      <% }) %>
+      <% data5.forEach(function(d) { %>
+          data5.push([<%=d.cameraID%>, '<%=d.date%>', <%=d.people%>]);
+      <% }) %>
+    </script>
     <script src="./public/js/chart.js"></script>
     <script src="./public/js/search.js"></script>
   </body>
