--- a/views/basic/index.ejs
+++ b/views/basic/index.ejs
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./public/css/info.css">
     <link rel="stylesheet" href="./public/css/cameraImage.css">
     <link rel="stylesheet" href="./public/css/search.css">
+    <script src="https://use.fontawesome.com/893b912e06.js"></script>
     <script src="https://code.jquery.com/jquery-latest.min.js"></script>
   </head>
   <body>
