--- a/views/basic/chart.ejs
+++ b/views/basic/chart.ejs
@@ -19,3 +19,54 @@
       </div>
     </div>
 </div>
+<script type="text/javascript">
+  var color = ['#4abd9e', '#4097f5', '#f68645', '#dd497d', '#febe27', '#a14cfc', '#84c460', '#fa4cd7', '#3ed4de', '#fc5551'];
+  var data3 = [];
+  var data4 = [];
+  var data5 = [];
+  <% data3.forEach(function(d) { %>
+      data3.push([<%=d.cameraID%>, '<%=d.date%>', <%=d.people%>]);
+  <% }) %>
+  <% data4.forEach(function(d) { %>
+      data4.push([<%=d.cameraID%>, '<%=d.date%>', <%=d.people%>]);
+  <% }) %>
+  <% data5.forEach(function(d) { %>
+      data5.push([<%=d.cameraID%>, '<%=d.date%>', <%=d.people%>]);
+  <% }) %>
+  var chart1 = {
+    labels: ['7월 14일(화)', '7월 15일(수)', '7월 16일(목)', '7월 17일(금)', '7월 18일(토)', '7월 19일(일)', '오늘(월)'],
+    datasets: [{
+        label: '카메라 1',
+        borderColor: color[0],
+        backgroundColor: color[0],
+        fill: false,
+        data: [65, 79, 120, 110, 132, 55, 87],
+        yAxisID: 'y-axis-1',
+      }, {
+        label: '카메라 2',
+        borderColor: color[1],
+        backgroundColor: color[1],
+        fill: false,
+        data: [95, 101, 78, 72, 115, 62, 63],
+        yAxisID: 'y-axis-1'
+      },
+      {
+        label: '카메라 3',
+        borderColor: color[2],
+        backgroundColor: color[2],
+        fill: false,
+        data: [90, 100, 72, 68, 103, 83, 80],
+        yAxisID: 'y-axis-1',
+      },
+      {
+        label: '총인원',
+        borderColor: color[3],
+        backgroundColor: color[3],
+        fill: false,
+        data: [250, 280, 270, 250, 350, 200, 230],
+        yAxisID: 'y-axis-1',
+      }
+    ]
+  };
+</script>
+<script src="./public/js/chart.js"></script>
