--- a/views/basic/chart.ejs
+++ b/views/basic/chart.ejs
@@ -3,14 +3,14 @@
     <div class="CameraNumber">
       카메라별 차트
     </div>
-    <div class="chartTab">
+    <!--<div class="chartTab">-->
       <%- include('./search') %>
       <div class="chartCrt">
         <div class = "criteria" id = "chartBtn1">지난 7일 총인원</div>
         <div class = "criteria" id = "chartBtn2">시간 별 총인원</div>
         <div class = "criteria" id = "chartBtn3">최근 평균 인원수</div>
       </div>
-      </div>
+      <!--</div>-->
       <div class="chart">
         <div id='chartjsLegend' class='chartjsLegend'></div>
         <canvas id="myChart1" width="1200px" height="500px"></canvas>
