--- a/views/basic/search.ejs
+++ b/views/basic/search.ejs
@@ -5,6 +5,6 @@
      -
     <input class="date" type="date" id="date_to" value="xxx" min="yyy" max="zzz">
     <input class="time" type="time" id="time_to">
-    <button class="submit btn" id="search_btn">검색</button>
+    <!--<button class="submit btn" id="search_btn">검색</button>-->
   </form>
 </div>
