--- a/public/css/search.css
+++ b/public/css/search.css
@@ -1,6 +1,6 @@
 div#search{
   //padding: 30px;
-  padding: 30px 0px;
+  //padding: 30px 0px;
   //border: solid 1px red;
   color: white;
   margin-bottom: 30px;
