--- a/public/css/chart.css
+++ b/public/css/chart.css
@@ -36,7 +36,8 @@ body{
 .chartTab{
   width: 100%;
   border-radius: 3px;
-  text-align: right;
+  padding: 30px;
+  text-align: justify;
 }
 .CameraNumber{
   color: white;
