--- a/views/admin/setting2.ejs
+++ b/views/admin/setting2.ejs
@@ -10,13 +10,13 @@
         <tr></tr>
         <tr>
           <td>카메라 해상도</td>
-          <td><input type="text" id="res_cw" value="<%= data.sizeW %>" name = "res_cw" class="input" placeholder="width" required></td>
-          <td><input type="text" id="res_ch" name = "res_ch" value="<%= data.sizeH %>" placeholder="height" required></td>
+          <td><input type="text" id="sizeW" value="<%= data.sizeW %>" name = "sizeW" class="input" placeholder="width" required></td>
+          <td><input type="text" id="sizeH" name = "sizeH" value="<%= data.sizeH %>" placeholder="height" required></td>
         </tr>
         <tr>
           <td>리사이즈 해상도</td>
-          <td><input type="text" id="res_rw" value="<%= data.resizeW %>" name = "res_rw" class="input" placeholder="width" required></td>
-          <td><input type="text" id="res_rh" value="<%= data.resizeH %>" name = "res_rh" placeholder="height" required></td>
+          <td><input type="text" id="resizeW" value="<%= data.resizeW %>" name = "resizeW" class="input" placeholder="width" required></td>
+          <td><input type="text" id="resizeH" value="<%= data.resizeH %>" name = "resizeH" placeholder="height" required></td>
         </tr>
         <tr>
           <td>카메라 숫자</td>
@@ -24,7 +24,7 @@
             <% for(var i = 0; i < data.camNum; i++) {%>
               <% i %>
             <% } %>
-            <select id="num_cam" name="num_cam">
+            <select id="camNum" name="camNum">
               <% for(var i = 1; i < data.camNum; i++) {%>
                 <option value="<%= i %>" class="input"><%= i %></option>
               <% } %>
@@ -50,7 +50,7 @@
          <tr>
            <td>저장 간격</td>
            <td>
-             <select id="save_interval" name="저장간격">
+             <select id="saveInterval" name="저장간격">
                <option value="<%= data.saveInterval %>" class="input"><%= data.saveInterval %>초</option>
                <option value="10" class="input">10초</option>
                <option value="20" class="input">20초</option>
@@ -61,7 +61,7 @@
          <tr>
            <td>최대 저장 갯수</td>
            <td>
-             <select id="max_cnt" name="최대저장갯수">
+             <select id="saveNum" name="최대저장갯수">
                <option value="<%= data.saveNum %>" class="input"><%= data.saveNum %>개</option>
                <option value="100" class="input">100개</option>
                <option value="200" class="input">200개</option>
@@ -72,7 +72,7 @@
          <tr>
            <td>최대 저장 기간</td>
            <td>
-             <select id="max_term" name="최대저장기간">
+             <select id="savePeriod" name="최대저장기간">
                <option value="<%= data.savePeriod %>" class="input"><%= data.savePeriod %>개월</option>
                <option value="10" class="input">10개월</option>
                <option value="20" class="input">20개월</option>
