--- a/views/admin/setting1.ejs
+++ b/views/admin/setting1.ejs
@@ -49,7 +49,7 @@
          <tr>
            <td>저장 간격</td>
            <td>
-             <select id="saveInterval" name="저장간격">
+             <select id="saveInterval" name="saveInterval">
                <option value="<%= data.saveInterval %>" class="input"><%= data.saveInterval %>초</option>
                <option value="10" class="input">10초</option>
                <option value="20" class="input">20초</option>
@@ -60,7 +60,7 @@
          <tr>
            <td>최대 저장 갯수</td>
            <td>
-             <select id="saveNum" name="최대저장갯수">
+             <select id="saveNum" name="saveNum">
                <option value="<%= data.saveNum %>" class="input"><%= data.saveNum %>개</option>
                <option value="100" class="input">100개</option>
                <option value="200" class="input">200개</option>
@@ -71,7 +71,7 @@
          <tr>
            <td>최대 저장 기간</td>
            <td>
-             <select id="savePeriod" name="최대저장기간">
+             <select id="savePeriod" name="savePeriod">
                <option value="<%= data.savePeriod %>" class="input"><%= data.savePeriod %>개월</option>
                <option value="10" class="input">10개월</option>
                <option value="20" class="input">20개월</option>
