--- a/views/admin/setting1.ejs
+++ b/views/admin/setting1.ejs
@@ -82,7 +82,7 @@
          </tr>
        </table>
        </div>
-       <td><button class="confirm btn submit" id="confirm1">확인</button></td>
+       <td><button type = "button" class="confirm btn submit" id="confirm1">확인</button></td>
        </form>
        <!--
        <button class="btn" id="change">정보 수정</button>
