--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -72,7 +72,7 @@ body{
   display: inline-block;
   color: rgba( 255, 255, 255, 0.8);
   padding: 1px 15px;
-  font-size: 1em;
+  font-size: 0.8em;
   border-radius: 20px;
   border: 2px solid rgba( 255, 255, 255, 0.8);
       margin-bottom: 10px;
@@ -84,6 +84,7 @@ body{
   background-color: #4abd9e;
   display: inline-block;
   border-radius: 30px;
+  border: none;
 }
 .cropper {
     position: relative;
