--- a/views/basic/chart.ejs
+++ b/views/basic/chart.ejs
@@ -3,6 +3,7 @@
     <div class="CameraNumber">
       카메라별 차트
     </div>
+    <form action="./search" method="post" id="search">
     <div class="chartTab">
       <%- include('./search') %>
       <div class="chartCrt">
@@ -17,6 +18,7 @@
         <canvas id="myChart2" width="1200px" height="500px"></canvas>
         <canvas id="myChart3" width="1200px" height="500px"></canvas>
       </div>
+      </form>
     </div>
 </div>
 <script type="text/javascript">
