--- a/views/basic/search.ejs
+++ b/views/basic/search.ejs
@@ -1,10 +1,10 @@
 <div id="search">
-  <form action="./search" method="post" id="search">
     <input class="date" type="date" id="date_from" value="xxx" min="yyy" max="zzz">
     <input class="time" type="time" id="time_from" value="xxx">
      -
     <input class="date" type="date" id="date_to" value="xxx" min="yyy" max="zzz">
     <input class="time" type="time" id="time_to">
+    <input id="result_from" type="hidden">
+    <input id="result_to" type="hidden">
     <!--<button class="submit btn" id="search_btn">검색</button>-->
-  </form>
 </div>
